reorganizacion de carpetas y arreglo de rutas a las pantallas

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body class="body-index">
     <h1>Iniciar Sesión</h1>
     
-    <form class="form" action="home.html" method="get">
+    <form class="form" action="/pantallas/home.html" method="get">
         <span class="input-span">
           <label for="email" class="label">E-mail</label>
           <input type="email" name="email" id="email" required>
