--- a/pantallas/carrito.html
+++ b/pantallas/carrito.html
@@ -6,15 +6,15 @@
     <title>Carrito</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/css/bootstrap.min.css" rel="stylesheet">
     <link href="https://getbootstrap.com/docs/5.3/assets/css/docs.css" rel="stylesheet">
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="../styles.css">
     <script defer src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/js/bootstrap.bundle.min.js"></script>
 </head>
 <body>
     <nav>
-        <button onclick="window.location.href='home.html'">Home</button>
-        <button onclick="window.location.href='productos.html'">Productos</button>
-        <button onclick="window.location.href='carrito.html'" class="active">Carrito</button>
-        <button onclick="window.location.href='pago.html'">Pagar</button>
+        <button onclick="window.location.href='/pantallas/home.html'">Home</button>
+        <button onclick="window.location.href='/pantallas/productos.html'">Productos</button>
+        <button onclick="window.location.href='/pantallas/carrito.html'" class="active">Carrito</button>
+        <button onclick="window.location.href='/pantallas/pago.html'">Pagar</button>
     </nav>
 
     <div class="container cart-container">
@@ -120,8 +120,8 @@
               <h5 class="text-coral">Enlaces Rápidos</h5>
               <div class="d-flex flex-wrap">
                 <a href="#" class="text-decoration-none text-muted me-3">Inicio</a>
-                <a href="productos.html" class="text-decoration-none text-muted me-3">Productos</a>
-                <a href="carrito.html" class="text-decoration-none text-muted me-3">Carrito</a>
+                <a href="/pantallas/productos.html" class="text-decoration-none text-muted me-3">Productos</a>
+                <a href="/pantallas/carrito.html" class="text-decoration-none text-muted me-3">Carrito</a>
               </div>
             </div>
             
