--- a/pantallas/home.html
+++ b/pantallas/home.html
@@ -6,7 +6,7 @@
     <title>Inicio</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/css/bootstrap.min.css" rel="stylesheet">
     <link href="https://getbootstrap.com/docs/5.3/assets/css/docs.css" rel="stylesheet">
-    <link rel="stylesheet" href="/styles.css">
+    <link rel="stylesheet" href="../styles.css">
     <script defer src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/js/bootstrap.bundle.min.js"></script>
 </head>
 <body>
@@ -14,14 +14,14 @@
         <div class="container-fluid">
           <a class="navbar-brand" href="#">Desarrollo Web</a>
           <div class="collapse navbar-collapse justify-content-end d-flex gap-2">
-            <a href="productos.html" type="button" class="btn btn-primary">Productos</a>
-            <a href="carrito.html" type="button" class="btn btn-primary">Carrito</a>
-            <a href="pago.html" type="button" class="btn btn-primary">Pagar</a>
-            <a href="admin.html" type="button" class="btn btn-success">Panel Admin</a>
+            <a href="/pantallas/productos.html" type="button" class="btn btn-primary">Productos</a>
+            <a href="/pantallas/carrito.html" type="button" class="btn btn-primary">Carrito</a>
+            <a href="/pantallas/pago.html" type="button" class="btn btn-primary">Pagar</a>
+            <a href="/pantallas/admin.html" type="button" class="btn btn-success">Panel Admin</a>
           </div>
           <div class="collapse navbar-collapse justify-content-end" id="navbarNavAltMarkup">
             <div class="navbar-nav d-flex gap-2">
-              <a href="index.html" class="btn btn-danger">Cerrar sesión</a>
+              <a href="../index.html" class="btn btn-danger">Cerrar sesión</a>
             </div>
           </div>
         </div>
@@ -87,9 +87,9 @@
               <h5 class="text-coral">Enlaces Rápidos</h5>
               <div class="d-flex flex-wrap">
                 <a href="#" class="text-decoration-none text-muted me-3">Inicio</a>
-                <a href="productos.html" class="text-decoration-none text-muted me-3">Productos</a>
-                <a href="carrito.html" class="text-decoration-none text-muted me-3">Carrito</a>
-                <a href="admin.html" class="text-decoration-none text-muted me-3">Admin</a>
+                <a href="/pantallas/productos.html" class="text-decoration-none text-muted me-3">Productos</a>
+                <a href="/pantallas/carrito.html" class="text-decoration-none text-muted me-3">Carrito</a>
+                <a href="/pantallas/admin.html" class="text-decoration-none text-muted me-3">Admin</a>
               </div>
             </div>
             
