--- a/pantallas/productos.html
+++ b/pantallas/productos.html
@@ -6,15 +6,15 @@
     <title>Productos</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/css/bootstrap.min.css" rel="stylesheet">
     <link href="https://getbootstrap.com/docs/5.3/assets/css/docs.css" rel="stylesheet">
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="../styles.css">
     <script defer src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/js/bootstrap.bundle.min.js"></script>
 </head>
 <body>
     <nav>
-        <button onclick="window.location.href='home.html'">Home</button>
-        <button onclick="window.location.href='productos.html'" class="active">Productos</button>
-        <button onclick="window.location.href='carrito.html'">Carrito</button>
-        <button onclick="window.location.href='pago.html'">Pagar</button>
+        <button onclick="window.location.href='/pantallas/home.html'">Home</button>
+        <button onclick="window.location.href='/pantallas/productos.html'" class="active">Productos</button>
+        <button onclick="window.location.href='/pantallas/carrito.html'">Carrito</button>
+        <button onclick="window.location.href='/pantallas/pago.html'">Pagar</button>
     </nav>
 
     <div class="container products-container">
